--- a/tin/tin.css
+++ b/tin/tin.css
@@ -163,12 +163,11 @@
   }
   
   /* PRODUCTS */
-
   .product {
     position: relative;
     overflow: hidden;
     padding: 20px;
-    margin-bottom: 300px;
+    margin-bottom: 200px;
   }
   
   .product-category {
@@ -202,6 +201,8 @@
     cursor: pointer;
     transform: translateY(-20px);
     
+      /* transform: rotate(360deg); */
+      
   }
   
   .product-image {
@@ -319,6 +320,44 @@
     opacity: 1;
   }
   
+  .collection-container {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 10px;
+  }
+  
+  .collection {
+    position: relative;
+  }
+  
+  .collection img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  .collection p {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: #fff;
+    font-size: 50px;
+    text-transform: capitalize;
+  }
+  
+  .collection:nth-child(3) {
+    grid-column: span 2;
+    margin-bottom: 10px;
+  }
+
+  .arrow{
+    width: 30px;
+    height: 30px;
+  }
+
   .collection-container {
     width: 100%;
     display: grid;
